# kime-window

./: Cargo.toml  build.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs
src/: emoji.rs  main.rs
