[package]
name = "kime-window"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[profile.release]
lto = true

[dependencies]
ahash = "0.7.1"
anyhow = "1.0.38"
gio = { version = "0.9.1", features = ["dox"] }
glib = "0.10.3"
gtk = "0.9.2"
include-flate = "0.1.3"
libappindicator = "0.5.2"
pico-args = "0.4.0"
xdg = "2.2.0"

[build-dependencies]
codegen = { path = "./codegen" }

[workspace]
members = [
    ".",
    "codegen"
]

